# personalShoppingAssistant

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md  requirements-local.txt  run_backend.py  start.sh  start_all.sh
attached_assets/: Pasted--Build-system-and-user-message-for-LLM-system-prompt-Yo_1766806816320.txt  Pasted--Prompt-for-Replit-Formal-Controlled-Execution-Please--_1766802378399.txt  Pasted--SYSTEM-PROMPT-Dynamic-Personal-Shopping-Assistant-No-H_1768884135365.txt  Pasted--You-are-a-Clarifier-Agent-for-travel-planning-Your-tas_1766807549883.txt  Pasted-An-illustrative-end-to-end-journey-showing-how-the-AI-P_1766812010150.txt  Pasted-CORE-PRINCIPLES-Determine-the-user-s-intent-dynamically_1768911603616.txt  Pasted-Here-s-a-more-formal-and-precise-version-of-your-Replit_1768710051863.txt  Pasted-Message-discovery-2-12-05-00-PM-I-don-t-know-yet-where-_1768466356356.txt  Pasted-data-image-svg-xml-base64-PHN2ZyB4bWxucz0iaHR0cDovL3d3d_1767164584432.txt  Pasted-replace-SVG-icon-From-svg-xmlns-http-www-w3-org-2000-sv_1768464098470.txt  Register_1768796479143.scss  Register_1768796479146.tsx  customer_address_1766811382723.csv  customer_master_1766811382724.csv  customer_preferences_1766813101941.csv  inventory_store_0001_0025_New_1766805486830.xlsx  pricing_master_New_1766805486831.xlsx  product_master_clean_New_1766805486832.xlsx  product_variants_clean_New_1766805486833.xlsx
backend/: build_vector_index.py  config.py  data_import.py  main.py
backend/agents/: base.py  (+6 more)
client/: index.html
server/: index.ts  routes.ts
shared/: schema.ts
(+57 files in other folders)
